# drone_hunter

./: .gitignore  README.md  main.py  proposed_changes.md  pyproject.toml
configs/: nanodet_drone_finetune.yml
data/drone_detection/annotations/: train.json  val.json
docs/: training_results.md
drone_hunter_edge/: __init__.py  compare_renderers.py  debug_tracker.py  test_conf_thresholds.py
drone_hunter_edge/core/: __init__.py  adaptive_scheduler.py  detection.py  game_state.py  kalman_tracker.py  motion.py  observation.py  renderer.py  tiny_detector.py
drone_hunter_edge/inference/: __init__.py  backend.py  nanodet.py  ncnn_backend.py  onnx_backend.py  policy.py
drone_hunter_edge/models/: policy.onnx  policy_detector_real.onnx  tiny_drone_16k_medium.onnx  tiny_drone_63k_medium.onnx  tiny_drone_96.onnx  tiny_drone_easy_v4.onnx  tiny_drone_easy_v4_tiny.onnx  tiny_drone_v6.onnx
drone_hunter_edge/scripts/: ablation_thresholds.py  benchmark_hungarian.py  benchmark_providers.py  benchmark_uncertainty.py  convert_policy_to_onnx.py  convert_to_ncnn.sh  debug_kamikaze_deaths.py
drone_hunter_edge/termux/: requirements.txt  run_live.py  run_simulation.py  setup.sh
models/: nanodet_drone_fp16.onnx  nanodet_drone_int8.onnx  nanodet_drone_opset21_fp16.onnx  nanodet_drone_opset21_int8.onnx  tiny_drone_16k_medium.onnx
src/drone_hunter/: __init__.py
src/drone_hunter/configs/: env_config.yaml
src/drone_hunter/detection/: __init__.py  nanodet_onnx.py
src/drone_hunter/envs/: __init__.py  difficulty.py  drone_hunter_env.py  game_state.py
(+17 files in other folders)
